--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mantine/core": "6.0.21",
     "@mantine/hooks": "6.0.21",
+    "@tabler/icons-react": "^2.38.0",
     "@testing-library/react": "^14.0.0",
+    "idb": "^7.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "zustand": "^4.4.2"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.0",
